# api-benchmark-poc

./: .dockerignore  .gitignore  .railwayignore  Dockerfile  README.md  docker-compose.yml  sample-text.txt  start-local.sh
rust-api/: Cargo.toml  Dockerfile  railway.json
rust-api/src/: main.rs
ts-api/: Dockerfile  package-lock.json  package.json  railway.json
ts-api/src/: index.ts
